sandbox/geos/fp_geos_c.pas


function GEOSSTRtree_create_r(handle: TGEOSContextHandle_t; nodeCapacity: Tsize_t): PGEOSSTRtree; cdecl; external libgeos_c;
function GEOSSTRtree_build_r(handle: TGEOSContextHandle_t; tree: PGEOSSTRtree): longint; cdecl; external libgeos_c;
procedure GEOSSTRtree_insert_r(handle: TGEOSContextHandle_t; tree: PGEOSSTRtree; g: PGEOSGeometry; item: pointer); cdecl; external libgeos_c;
procedure GEOSSTRtree_query_r(handle: TGEOSContextHandle_t; tree: PGEOSSTRtree; g: PGEOSGeometry; callback: TGEOSQueryCallback; userdata: pointer); cdecl; external libgeos_c;
function GEOSSTRtree_nearest_r(handle: TGEOSContextHandle_t; tree: PGEOSSTRtree; geom: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSTRtree_nearest_generic_r(handle: TGEOSContextHandle_t; tree: PGEOSSTRtree; item: pointer; itemEnvelope: PGEOSGeometry; distancefn: TGEOSDistanceCallback; userdata: pointer): pointer; cdecl; external libgeos_c;
procedure GEOSSTRtree_iterate_r(handle: TGEOSContextHandle_t; tree: PGEOSSTRtree; callback: TGEOSQueryCallback; userdata: pointer); cdecl; external libgeos_c;
function GEOSSTRtree_remove_r(handle: TGEOSContextHandle_t; tree: PGEOSSTRtree; g: PGEOSGeometry; item: pointer): char; cdecl; external libgeos_c;
procedure GEOSSTRtree_destroy_r(handle: TGEOSContextHandle_t; tree: PGEOSSTRtree); cdecl; external libgeos_c;

function GEOSisEmpty_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSisSimple_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSisRing_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSHasZ_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSHasM_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSisClosed_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): char; cdecl; external libgeos_c;

type
  TGEOSRelateBoundaryNodeRules = longint;

const
  GEOSRELATE_BNR_MOD2 = 1;
  GEOSRELATE_BNR_OGC = 1;
  GEOSRELATE_BNR_ENDPOINT = 2;
  GEOSRELATE_BNR_MULTIVALENT_ENDPOINT = 3;
  GEOSRELATE_BNR_MONOVALENT_ENDPOINT = 4;

function GEOSRelatePattern_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; pat: pchar): char; cdecl; external libgeos_c;
function GEOSRelate_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): pchar; cdecl; external libgeos_c;
function GEOSRelatePatternMatch_r(handle: TGEOSContextHandle_t; mat: pchar; pat: pchar): char; cdecl; external libgeos_c;
function GEOSRelateBoundaryNodeRule_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; bnr: longint): pchar; cdecl; external libgeos_c;

type
  TGEOSValidFlags = longint;

const
  GEOSVALID_ALLOW_SELFTOUCHING_RING_FORMING_HOLE = 1;

function GEOSisValid_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSisValidReason_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): pchar; cdecl; external libgeos_c;
function GEOSisValidDetail_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; flags: longint; reason: PPchar; location: PPGEOSGeometry): char; cdecl; external libgeos_c;

type
  TGEOSMakeValidMethods = longint;

const
  GEOS_MAKE_VALID_LINEWORK = 0;
  GEOS_MAKE_VALID_STRUCTURE = 1;

function GEOSMakeValidParams_create_r(extHandle: TGEOSContextHandle_t): PGEOSMakeValidParams; cdecl; external libgeos_c;
procedure GEOSMakeValidParams_destroy_r(handle: TGEOSContextHandle_t; parms: PGEOSMakeValidParams); cdecl; external libgeos_c;
function GEOSMakeValidParams_setKeepCollapsed_r(handle: TGEOSContextHandle_t; p: PGEOSMakeValidParams; style: longint): longint; cdecl; external libgeos_c;
function GEOSMakeValidParams_setMethod_r(handle: TGEOSContextHandle_t; p: PGEOSMakeValidParams; method: TGEOSMakeValidMethods): longint; cdecl; external libgeos_c;
function GEOSMakeValid_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSMakeValidWithParams_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; makeValidParams: PGEOSMakeValidParams): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSRemoveRepeatedPoints_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; tolerance: double): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSGeomType_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): pchar; cdecl; external libgeos_c;
function GEOSGeomTypeId_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGetSRID_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): longint; cdecl; external libgeos_c;
procedure GEOSSetSRID_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; SRID: longint); cdecl; external libgeos_c;
function GEOSGeom_getUserData_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): pointer; cdecl; external libgeos_c;
procedure GEOSGeom_setUserData_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; userData: pointer); cdecl; external libgeos_c;
function GEOSGetNumGeometries_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGetGeometryN_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; n: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSNormalize_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSOrientPolygons_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; exteriorCW: longint): longint; cdecl; external libgeos_c;

type
  TGEOSPrecisionRules = longint;

const
  GEOS_PREC_VALID_OUTPUT = 0;
  GEOS_PREC_NO_TOPO = 1;
  GEOS_PREC_KEEP_COLLAPSED = 2;

function GEOSGeom_setPrecision_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; gridSize: double; flags: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeom_getPrecision_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): double; cdecl; external libgeos_c;
function GEOSGetNumInteriorRings_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeomGetNumPoints_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeomGetX_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; x: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeomGetY_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; y: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeomGetZ_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; z: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeomGetM_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; m: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGetInteriorRingN_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; n: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGetExteriorRing_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGetNumCoordinates_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeom_getCoordSeq_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSGeom_getDimensions_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeom_getCoordinateDimension_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): longint; cdecl; external libgeos_c;
function GEOSGeom_getXMin_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; value: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeom_getYMin_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; value: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeom_getXMax_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; value: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeom_getYMax_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; value: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeom_getExtent_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; xmin: Pdouble; ymin: Pdouble; xmax: Pdouble; ymax: Pdouble): longint; cdecl; external libgeos_c;
function GEOSGeomGetPointN_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; n: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeomGetStartPoint_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeomGetEndPoint_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSArea_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; area: Pdouble): longint; cdecl; external libgeos_c;
function GEOSLength_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; length: Pdouble): longint; cdecl; external libgeos_c;
function GEOSDistance_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSDistanceWithin_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; dist: double): char; cdecl; external libgeos_c;
function GEOSDistanceIndexed_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSHausdorffDistance_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSHausdorffDistanceDensify_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; densifyFrac: double; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSFrechetDistance_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSFrechetDistanceDensify_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry; densifyFrac: double; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSHilbertCode_r(handle: TGEOSContextHandle_t; geom: PGEOSGeometry; extent: PGEOSGeometry; level: dword; code: Pdword): longint; cdecl; external libgeos_c;
function GEOSGeomGetLength_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; length: Pdouble): longint; cdecl; external libgeos_c;
function GEOSNearestPoints_r(handle: TGEOSContextHandle_t; g1: PGEOSGeometry; g2: PGEOSGeometry): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSGeom_transformXY_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; callback: TGEOSTransformXYCallback; userdata: pointer): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSOrientationIndex_r(handle: TGEOSContextHandle_t; Ax: double; Ay: double; Bx: double; By: double;
  Px: double; Py: double): longint; cdecl; external libgeos_c;

type
  PGEOSWKTReader = type Pointer;
  PGEOSWKTWriter = type Pointer;
  PGEOSWKBReader = type Pointer;
  PGEOSWKBWriter = type Pointer;
  PGEOSGeoJSONReader = type Pointer;
  PGEOSGeoJSONWriter = type Pointer;

function GEOSWKTReader_create_r(handle: TGEOSContextHandle_t): PGEOSWKTReader; cdecl; external libgeos_c;
procedure GEOSWKTReader_destroy_r(handle: TGEOSContextHandle_t; reader: PGEOSWKTReader); cdecl; external libgeos_c;
function GEOSWKTReader_read_r(handle: TGEOSContextHandle_t; reader: PGEOSWKTReader; wkt: pchar): PGEOSGeometry; cdecl; external libgeos_c;
procedure GEOSWKTReader_setFixStructure_r(handle: TGEOSContextHandle_t; reader: PGEOSWKTReader; doFix: char); cdecl; external libgeos_c;
